--- a/artwork.html
+++ b/artwork.html
@@ -85,7 +85,7 @@
       <p class="body_text">The artist, who goes by <a class="links" href="https://www.instagram.com/jotados_graffiti"
           target="_blank">Jotados Graffiti</a>, says the painting is a homage to the island of San Andres and its
         "magic." San Andres is an island of Colombia in the Caribbean Sea which was once primarily inhabited by a black
-        colombian ethnic group called the Raizal. While the Raizal people's population is much lower than it once used
+        Colombian ethnic group called the Raizal. While the Raizal people's population is much lower than it once used
         to be, this painting still demonstrates that their cultural roots still remain deeply embedded in the island's
         identity. The painting may also serve as a tribute to the enduring presence of their Afro-Caribbean heritage and
         the resilience of a community that continues to preserve its traditions and way of life despite unchecked
@@ -122,7 +122,7 @@
         countries with the goal of improving the world.</p>
       <p class="body_text">The artist goes by <a class="links" href="https://www.instagram.com/crispstreetart"
           target="_blank">Crisp</a>, and while they're based out of Australia, they have created various street art
-        pieces around the world; which includes this one in Bogota, Colombia.</p>
+        pieces around the world; which includes this one in Bogotá, Colombia.</p>
     </div>
 
   </div>
