--- a/home.html
+++ b/home.html
@@ -92,9 +92,10 @@
         <hr class="divider_big">
 
         <div class="cardviewImageRight" data-aos="fade-up">
-            <p>Now this is a story of just about how I ended up here with a look and a frown</p>
-
-            <div style="margin-inline: 5%;">
+            <div style="flex:1;">
+                <p>Now this is a story of just about how I ended up here with a look and a frown</p>
+            </div>
+            <div style="flex:1; margin-inline: 2%;">
                 <img id="pic_id" class="body_image" src="home_images/babyme.jpg" alt="Baby Me">
             </div>
 
@@ -107,10 +108,10 @@
         </div>
 
         <div class="cardviewImageLeft" data-aos="fade-up">
-
+<div style="flex:1;">
             <p>In the DR I was born and raised then came to the US to better my days</p>
-
-            <div style="margin-inline: 5%;">
+</div>
+            <div style="flex:1; margin-inline: 2%;">
                 <img class="body_image" src="home_images/flightme.jpg" alt="Army">
             </div>
 
@@ -123,10 +124,12 @@
         </div>
 
         <div class="cardviewImageRight" data-aos="fade-up">
-            <p>I joined the army and my mom got scared and said you better go to college and park your butt on a chair
+            <div style="flex:1;">
+            <p >I joined the army and my mom got scared and said you better go to college and park your butt on a chair
             </p>
+        </div>
 
-            <div style="margin-inline: 5%;">
+            <div style="flex:1; margin-inline: 2%;">
                 <img class="body_image" src="home_images/armyme.jpg" alt="Work">
             </div>
         </div>
@@ -138,10 +141,11 @@
         </div>
 
         <div class="cardviewImageLeft" data-aos="fade-up">
-
+            <div style="flex:1;">
             <p>Now I'm here with a BS in CS and all I need is a job and fresh air</p>
-
-            <div style="margin-inline: 5%;">
+            </div>
+            
+            <div style="flex:1; margin-inline: 2%;">
                 <img class="body_image" src="home_images/schoolme.jpg" alt="School">
             </div>
 
