--- a/artwork.html
+++ b/artwork.html
@@ -22,14 +22,15 @@
 
   <nav id="navbar">
     <div class="logo">
-            <svg onclick="window.location.href='home.html'" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="100" cy="100" r="95"/>
-                <text x="50%" y="50%" dy=".1em">
-                    LSM
-                </text>
-            </svg>
-        </div>
-      <div class="nav-items">
+      <!-- trying out new logo -->
+      <svg onclick="window.location.href='home.html'" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="100" cy="100" r="93"/>
+          <path transform="translate(22, 40) scale(11)" fill="none"
+          d="M1.6,2.1 L1.6,8.1 L6,8.1 A1,1 0 0 0 6,6.1 L4.5,6.1 A1,1 0 0 1 4.5,4.1 L7.5,4.1 A1,1 0 0 1 8.5,5.1 L8.5,8.5 L8.5,5.1 A1,1 0 0 1 10.5,5.1 L10.5,8.5 L10.5,5.1 A1,1 0 0 1 12.5,5.1 L12.5,8.5"
+          />
+      </svg>
+    </div>
+    <div class="nav-items">
       <a href="home.html">HOME</a>
       <a href="projects.html">PROJECTS</a>
       <a class="active" href="artwork.html">ARTWORK</a>
@@ -128,6 +129,14 @@
   </div>
 
   <div class="footer">
+    <div class="footerLogo">
+      <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+          <circle stroke="grey" stroke-width="6"; fill="none" cx="100" cy="100" r="93"/>
+          <path stroke="grey" transform="translate(22, 40) scale(11)" fill="none"
+          d="M1.6,2.1 L1.6,8.1 L6,8.1 A1,1 0 0 0 6,6.1 L4.5,6.1 A1,1 0 0 1 4.5,4.1 L7.5,4.1 A1,1 0 0 1 8.5,5.1 L8.5,8.5 L8.5,5.1 A1,1 0 0 1 10.5,5.1 L10.5,8.5 L10.5,5.1 A1,1 0 0 1 12.5,5.1 L12.5,8.5"
+          />
+      </svg>
+    </div>
     <div class="footer_content">
             <a href="home.html">Home</a>
             <a href="projects.html">Projects</a>
