--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
                 <img src="projects_images/website.png">
             </div>
             <div class="body_div" data-aos="fade-up">
-                <h1>The Website</h1>
+                <h1>My Website</h1>
                 <p class="body_text">This website was created to showcase some of my programming skills and to serve as a personal 
                     resume; highlighting who I am as both an engineer and individual. </p>
                     <p class="body_text">My goal is to present myself as a potential 
