--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="mainstylesheet.css">
     <link rel="icon" type="image/png" href="xp_round_icon.png">
 
